fix(slider): min/max props, thumb alignment

--- a/packages/form/sass/components/_slider.scss
+++ b/packages/form/sass/components/_slider.scss
@@ -44,6 +44,7 @@
         align-items: center;
         appearance: none;
         display: flex;
+        min-height: 1.75em;
         padding: 0;
         position: relative;
         width: 100%;
